<project xmlns="http://maven.apache.org/POM/4.0.0">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>org.Paron</groupId>
    <artifactId>offline_payment_system</artifactId>
    <version>1.0</version>

    <packaging>pom</packaging>

    <properties>
        <java.version>26</java.version>
    </properties>

    <modules>
        <module>token-service</module>
        <module>ledger-service</module>
        <module>sync-service</module>
        <module>fraud-service</module>
        <module>api-gateway</module>
    </modules>

</project>
